# frappe-gtk

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs  listbox.rs  text_editor.rs
src/: frappe_ext.rs  gtk_ext.rs  lib.rs  macros.rs  prelude.rs  types.rs
