[package]
name = "frappe-gtk"
version = "0.1.0"
authors = ["darkstalker <slayerbeast@gmail.com>"]
description = "FRP extensions for Gtk"
documentation = "https://docs.rs/frappe-gtk"
repository = "https://github.com/darkstalker/frappe-gtk"
readme = "README.md"
keywords = ["frp", "reactive", "event", "gui", "gtk"]
license = "MIT"
edition = "2018"

[dependencies]
gtk = { version = "0.5.0", features = ["v3_10"] }
gdk = "0.9.0"
glib = "0.6.1"
frappe = "0.4.4"
fragile = "0.3.0"

[dev-dependencies]
with-macro = "0.1.1"
