[package]
name = "frappe-gtk"
version = "0.1.0"
authors = ["wolfiestyle <slayerbeast@gmail.com>"]
description = "FRP extensions for Gtk"
documentation = "https://docs.rs/frappe-gtk"
repository = "https://github.com/wolfiestyle/frappe-gtk"
readme = "README.md"
keywords = ["frp", "reactive", "event", "gui", "gtk"]
license = "MIT"
edition = "2018"

[features]
v3_20 = ["gtk/v3_20"]
v3_22 = ["v3_20", "gtk/v3_22"]

[dependencies]
gtk = "0.15.4"
gdk = "0.15.4"
glib = "0.15.10"
frappe = "0.4.5"
fragile = "1.2.0"

[dev-dependencies]
with-macro = "0.1.1"
